@@ -11,7 +11,7 @@
 <?php
 foreach ($this->contents as $content) { // run for each content
     ?>
-    <!-- anchor --><a name="<?php echo $content->id; ?>"></a>
+    <!-- anchor --><a name="content<?php echo $content->id; ?>"></a>
     <div class="accordion" id="accordion<?php echo $content->id; ?>"><!-- start accordian -->
         <div class="accordion-group">
     	<div class="accordion-heading" style="background-color: #F6F6F6;">
